--- a/alertmanager-webhook/alert-webhook-script-cm.yaml
+++ b/alertmanager-webhook/alert-webhook-script-cm.yaml
@@ -48,8 +48,8 @@ data:
 
 
     def sendmsgtotg(status, alertname, instance, job, description, summary):
-        tg_token = '723806405:AAF_x8-giga4HPntMHQCFOepA8D5pnXyiWE'
-        chatid = '-369453715'
+        tg_token = '723806405:AAF_x8-********'
+        chatid = '-*****'
         request_url = 'https://api.telegram.org/bot{0}/sendMessage'.format(tg_token)
         msg = '''
         *{status}*
@@ -58,7 +58,7 @@ data:
         job = {job}
         description = {description}
         summary = {summary}
-        [BOB Alert Platform.](https://www.bobvip1.com)
+        [BOB Alert Platform.](https://www.**.com)
         '''.format(status=status, alertname=alertname, instance=instance, job=job, description=description, summary=summary)
         payload = {'chat_id': chatid, 'text': msg, 'parse_mode': 'markdown'}
         req = requests.post(request_url, data=payload)
